--- a/render.yaml
+++ b/render.yaml
@@ -2,22 +2,19 @@ services:
   - type: web
     name: voguemen-api
     env: node
-    buildCommand: cd server && npm install && npm run build
-    startCommand: cd server && npm start
+    plan: free
+    rootDir: server
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
+      - key: NODE_ENV
+        value: production
+
       - key: PORT
         value: 5000
-      - key: DATABASE_URL
-        fromDatabase:
-          name: voguemen-db
-          property: connectionString
+
       - key: JWT_SECRET
         generateValue: true
+
       - key: CORS_ORIGIN
         value: https://your-frontend-link.vercel.app
-
-databases:
-  - name: voguemen-db
-    plan: free
-    databaseName: voguemen
-    user: voguemen_user
