--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,48 @@
 services:
+  # Backend API
   - type: web
     name: voguemen-api
     env: node
     plan: free
     rootDir: server
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npx prisma generate && npx prisma migrate deploy && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
-
       - key: PORT
         value: 5000
-
       - key: JWT_SECRET
         generateValue: true
-
       - key: CORS_ORIGIN
-        value: https://your-frontend-link.vercel.app
+        value: https://voguemen.onrender.com
+      - key: DATABASE_URL
+        fromDatabase:
+          name: voguemen-db
+          property: connectionString
+
+  # Frontend Static Site
+  - type: web
+    name: voguemen
+    env: static
+    plan: free
+    buildCommand: npm install && npm run build
+    staticPublishPath: dist
+    envVars:
+      - key: VITE_API_URL
+        value: https://voguemen-api.onrender.com/api
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: public, max-age=0, must-revalidate
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+
+# PostgreSQL Database
+databases:
+  - name: voguemen-db
+    plan: free
+    databaseName: voguemen
+    user: voguemen_user
