--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,5 @@
 PORT=5000
-DATABASE_URL=mysql://user:pass@host:port/db
+# PostgreSQL connection string format for Render
+DATABASE_URL=postgresql://username:password@hostname:5432/database_name
 JWT_SECRET=your_jwt_secret_here
-CORS_ORIGIN=https://your-frontend-url.vercel.app
+CORS_ORIGIN=https://voguemen.onrender.com
